:memo: added new video for the hero

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,20 +28,19 @@
   --font-archivo: 'Archivo', sans-serif;
   --font-excon: 'Excon', sans-serif;
   --font-sentient: 'Sentient', serif;
-  --jaune: #fcd309;
+  --color-jaune: #fcd309;
   --bg-jaune: #fcd309;
   --bg-noir: #101010;
 }
 
-@theme {
+@theme inline {
   --font-archivo: var(--font-archivo);
   --font-excon: var(--font-excon);
   --font-sentient: var(--font-sentient);
 
-  --bg-jaune: var(--bg-jaune);
-  --bg-noir: var(--bg-noir);
+  --color-jaune: var(--color-jaune);
+  --color-noir: var(--noir);
 
   --text-jaune: var(--bg-jaune);
   --border-jaune: var(--jaune);
 }
-
