--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import 'tailwindcss';
 
+/* Masque la scrollbar mais garde le scroll actif */
+::-webkit-scrollbar {
+  display: none;
+}
+
+html,
+body {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE et Edge */
+}
+
 .mask-text {
   -webkit-mask-image: text;
   -webkit-mask-image: none;
