--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,10 +62,13 @@ body {
 
 .title {
   color: #fff;
-  font-size: clamp(3rem, 15vw, 12.5rem);
+  font-size: clamp(3rem, 15vw, 17rem);
   line-height: 1.05;
   font-style: normal;
   font-weight: 900;
   line-height: normal;
   mix-blend-mode: difference;
+}
+
+.gradient-universeeditfr {
 }
